[metadata]
name = hashraft-AlexAndCharles
version = 0.0.1
author = Alex Mazur, Charles Qian
author_email = Alex.Mazur@colorado.edu, Charles.Qian@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bouldercoder9/hash-raft
project_urls =
    Bug Tracker = https://github.com/bouldercoder9/hash-raft
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = hashraft
packages = find:
python_requires = >=3.6

[options.packages.find]
where = hashraft